--- a/app/views/points/show.html.erb
+++ b/app/views/points/show.html.erb
@@ -58,13 +58,16 @@
       center:latlng,
       mapTypeId:google.maps.MapTypeId.ROADMAP,      
     };
-
-    var map = new google.maps.Map(document.getElementById("map_canvas"),myOptions);    
     
+    var map = new google.maps.Map(document.getElementById("map_canvas"),myOptions);    
+
+    //map.addOverlay(marker);
+
     var marker = new google.maps.Marker({
       position:latlng,
       title: "<%= @point.place %>",
       map: map,
+      icon:new google.maps.MarkerImage('/assets/cyclingMarker.png', new google.maps.Size(32, 37))
     });
   }
   google.maps.event.addDomListener(window, 'load', initialize);
