--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,11 @@
   <%= csrf_meta_tags %>
 
   <style type="text/css">
-    body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-    }
+      #map_canvas {
+        width: 500px;
+        height: 400px;
+        float: left;
+      }
   </style>
 
 </head>
@@ -66,8 +67,7 @@
   </div>
 </div>
 
-<div class="container-fluid">
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script> 
+<div class="container-fluid">  
   
   <% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>">
@@ -85,13 +85,11 @@
       <%= render "layouts/sign_up_form" %>
     <% end %>  
 
-    <div class="span10 well" style="height: 100%">
+    <div class="span10 well">
       <%= yield %>
     </div>
 
   </div>
-
-
 
   <footer>
     <p>&copy; BiciNETa 2012</p>
