--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -1,32 +1,12 @@
 <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script> 
 
-
-<style type="text/css">
-  html { height: 100% }
-  body { height: 100%; }  
-  .container-fluid { height: 100%;}
-  .row-fluid { height: 90%;}
-  #gMap { height: 100%; width: 50%;}
-</style>
-
 <h1>Listado de puntos</h1>
 
-<div id="search_points" style="margin-top: 20px;">
-  <%= form_tag points_path, {class: "form-search", method: :get} do %>
-      <%= text_field_tag :search, params[:search] %>
-      <%= submit_tag :Buscar, class: "btn" %>
-  <% end %>
-</div>
-
-<div class="row-fluid">
-
-  <div id="gMap" class="span10 well"> 
-    <div id="map_canvas" style="width:100%; height:100%"></div>  
-  </div>  
+<div class="row-fluid" style="margin-top: 20px;">
 
   <% if current_user  %>
-    <div class="span4 well"> 
-      <h3>Tus puntos: </h3>
+    <div class="span6 well"> 
+      <h3>Tus puntos: </h3><br>
       <ul id="yourPoints">
         <% @points.each do |p| %>
           <% if p.user && p.user.id == current_user.id %>
@@ -38,57 +18,80 @@
       <span id="zoomOut" class="badge success">Zoom Out</span>
     </div>
   <% end %>
-  
-  <div class="span16 well">
-    <table class="table table-striped table-bordered">
-  <tr>
-    <th>Nombre</th>
-    <th>Creador</th>
-    <th>Address</th>
-    <th>Latitude</th>
-    <th>Longitude</th>
-    <% if current_user && current_user.is_admin? %>   
-    <th></th>    
-    <% end %>
-  </tr>
 
-  <% @points.each do |p| %>
+  <div id="map_canvas" class="span10 well"></div>   
+</div>
+
+<div class="row-fluid">
+  <div class="span6 well">
+    <div id="search_points" >
+      <%= form_tag points_path, {class: "form-search", method: :get} do %>
+          <%= label_tag "Buscar" %>
+          <%= text_field_tag :search, params[:search] %>
+          <%= submit_tag :Buscar, class: "btn" %>
+          <%= link_to 'Nuevo Punto', new_point_path, class: "btn" %>
+      <% end %>
+    </div>
+  </div> 
+</div>
+
+<div class="row-fluid">
+  <div class="span14 well">    
+    <table class="table table-striped table-bordered">
       <tr>
-        <td>
-          <%= link_to p.place, p %>
-        </td>
-        <td>
-        <% if p.user.nil? %>
-          <%= link_to "usuario eliminado", "#" %>
-        <% else %>
-          <%= link_to p.user.name, p.user %>
-        <% end %>        
-        </td>
-        <td><%= p.address %></td>
-        <td><%= p.latitude %></td>
-        <td><%= p.longitude %></td>
-        <% if current_user && current_user.is_admin? %>
-        <td>
-          <a href="<%= edit_point_path(p) %>"><i class="icon-edit"></i></a>
-          <a href="<%= point_path(p) %>" data-confirm="Estás seguro de eliminar a <%= p.address %>?" data-method="delete" rel="nofollow"><i class="icon-remove"></i></a>
-        </td>
+        <th>Nombre</th>
+        <th>Creador</th>
+        <th>Address</th>
+        <th>Latitude</th>
+        <th>Longitude</th>
+        <% if current_user && current_user.is_admin? %>   
+        <th></th>    
         <% end %>
       </tr>
-  <% end %>
-</table>
-<p id="notice"><%= notice %></p>
+      
+      <% if @points_search.count > 0 %>
+        <% @points_search.each do |p| %>
+          <tr>
+            <td>
+              <%= link_to p.place, p %>
+            </td>
+            <td>
+            <% if p.user.nil? %>
+              <%= link_to "usuario eliminado", "#" %>
+            <% else %>
+              <%= link_to p.user.name, p.user %>
+            <% end %>        
+            </td>
+            <td><%= p.address %></td>
+            <td><%= p.latitude %></td>
+            <td><%= p.longitude %></td>
+            <% if current_user && current_user.is_admin? %>
+              <td>
+                <a href="<%= edit_point_path(p) %>"><i class="icon-edit"></i></a>
+                <a href="<%= point_path(p) %>" data-confirm="Estás seguro de eliminar a <%= p.address %>?" data-method="delete" rel="nofollow"><i class="icon-remove"></i></a>
+              </td>
+            <% end %>
+          </tr>
+        <% end %>
+      <% else %>
+        <tr>
+          <td colspan="6">
+            No se encontraron resultados para <strong>"<%= params[:search] %> "</strong>
+          </td>
+        </tr>
+      <% end %>
+
+
+      
+    </table>
+  </div>  <!-- div span table -->
 </div>  
-
-
-
-
 
 <script type="text/javascript">  
   $(document).ready(function() {
   function initialize() {
-    <% @point = @points.first %>
 
-    var latlng = new google.maps.LatLng(<%= @point.latitude %>, <%= @point.longitude%>);    
+    var latlng = new google.maps.LatLng(-33.457781, -70.590267);    
     var myOptions = {
       zoom:12,
       center:latlng,
@@ -97,17 +100,10 @@
 
     var map = new google.maps.Map(document.getElementById("map_canvas"),myOptions);  
 
-    var marker = new google.maps.Marker({
-      position:latlng,
-      title: "<%= @point.place.to_s + " (" + @point.latitude.to_s + ',' + @point.longitude.to_s + ')' %>",
-      map: map,
-      icon:new google.maps.MarkerImage('/assets/cyclingMarker.png', new google.maps.Size(32, 37))
-    });
-
-    var marker2;
+    var marker;
     <% @points.each do |p| %>
     
-      marker2 = new google.maps.Marker({
+      marker = new google.maps.Marker({
         position: new google.maps.LatLng(<%= p.latitude %> , <%= p.longitude %>),
         title: "<%= p.place.to_s + " (" + p.latitude.to_s + ',' + p.longitude.to_s + ')' %>",
         map: map,
