--- a/app/views/points/show.html.erb
+++ b/app/views/points/show.html.erb
@@ -1,25 +1,15 @@
 <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script> 
 
-<style type="text/css">
-  html { height: 100% }
-  body { height: 100%; }  
-  .container-fluid { height: 100%;}
-  .row-fluid { height: 90%;}
-  #gMap { height: 100%; width: 50%;}
-</style>
-
 <div class="row-fluid">
 
-  <div id="gMap" class="span10 well"> 
-    <div id="map_canvas" style="width:100%; height:100%"></div>  
-  </div>
+  <div id="map_canvas" class="span7 well"></div>  
 
-  <div class="span3">
-    <br><br><br><br><br><br><br>
-    <h1><%= @point.place %><h1>
-      <br><br>
+  <div class="span6 well">
+    
+    <h1><%= @point.place %><h1>      
+    <br>
     <p>
-      <b>Dirección:</b>
+      <b> Dirección: </b>
       <%= @point.address %>
     </p>
 
@@ -41,13 +31,11 @@
         <% end %>        
     </p>
 
-  </div>  
-</div>
-
-<% if current_user && ( @point.user && ( @point.user.id == current_user.id)  || current_user.is_admin?) %> 
-  <%= link_to 'Edit', edit_point_path(@point), class: "btn" %>
-<% end %>
-<%= link_to 'Back', points_path, class: "btn" %>
+    <% if current_user && ( @point.user && ( @point.user.id == current_user.id)  || current_user.is_admin?) %> 
+      <%= link_to 'Editar Punto', edit_point_path(@point), class: "btn" %>
+    <% end %>
+    <%= link_to 'Listado Puntos', points_path, class: "btn" %>
+  </div>
 
 <script type="text/javascript">
   function initialize() {
