--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -1,38 +1,55 @@
 <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script> 
 
-<h1>Listado de puntos</h1>
-
-<div class="row-fluid" style="margin-top: 20px;">
-
-  <% if current_user  %>
-    <div class="span6 well"> 
-      <h3>Tus puntos: </h3><br>
-      <ul id="yourPoints">
-        <% @points.each do |p| %>
-          <% if p.user && p.user.id == current_user.id %>
-            <li><%= link_to p.place, p %> <%= link_to " (ver)", "#" %> <span class="hidden"><%= p.latitude.to_s+","+p.longitude.to_s %></span></li>            
-          <% end %>
-        <% end %>
-      </ul>
-      <span id="zoomIn" class="badge success">Zoom In</span>
-      <span id="zoomOut" class="badge success">Zoom Out</span>
+<div class="row-fluid" >
+  <div class="well"  style="padding-bottom: 30px;">
+    <div class="span4" >
+      <h1>Listado de puntos</h1>
     </div>
-  <% end %>
+    <div class="span2">
+      <%= link_to "Agregar Punto", new_point_path, class:"btn" %> 
+    </div>
+  </div >
+</div>  
 
-  <div id="map_canvas" class="span10 well"></div>   
+<div class="row-fluid" >
+  <div class="span6 well">
+
+    <div class="row-fluid">
+      <div class="span16 well">        
+        <h3>Puntos existentes</h3><br>
+        <%= form_tag points_path, {class: "form-inline", method: :get} do %>
+            
+            <%= label_tag "Nombre del lugar " %>
+            <%= text_field_tag :search, params[:search], placeholder: "Ingresa el nombre del lugar" %>
+            <%= submit_tag :Buscar, class: "btn btn-primary" %>                            
+        <% end %>        
+      </div> 
+    </div>
+
+    <div class="row-fluid">
+      <div class="span16 well"> 
+          <h3>Resultados de búsqueda: </h3><br>
+          <ul id="yourPoints">
+            <% @points_search.each do |p| %>              
+                <li>
+                  <%= link_to p.place, p %> 
+                  <%= link_to " (ver en el mapa)", "#" %> 
+                  <span class="hidden"><%= p.latitude.to_s+","+p.longitude.to_s %></span>
+                </li>            
+            <% end %>
+          </ul>
+          <span id="zoomIn" class="badge success">Zoom In</span>
+          <span id="zoomOut" class="badge success">Zoom Out</span>
+        </div>
+    </div>
+    
+  </div>
+
+  <div id="map_canvas" class="span6 well"></div>   
 </div>
 
 <div class="row-fluid">
-  <div class="span6 well">
-    <div id="search_points" >
-      <%= form_tag points_path, {class: "form-search", method: :get} do %>
-          <%= label_tag "Buscar" %>
-          <%= text_field_tag :search, params[:search] %>
-          <%= submit_tag :Buscar, class: "btn" %>
-          <%= link_to 'Nuevo Punto', new_point_path, class: "btn" %>
-      <% end %>
-    </div>
-  </div> 
+  
 </div>
 
 <div class="row-fluid">
@@ -49,8 +66,8 @@
         <% end %>
       </tr>
       
-      <% if @points_search.count > 0 %>
-        <% @points_search.each do |p| %>
+      <% if @points.count > 0 %>
+        <% @points.each do |p| %>
           <tr>
             <td>
               <%= link_to p.place, p %>
